# aeffects-conf2xml

./: .gitignore  CMakeLists.txt  README.md
include/cutils/: config_utils.h  misc.h
src/: config_utils.cpp  load_file.c  main.cpp
